--- a/index.html
+++ b/index.html
@@ -1,9 +1,39 @@
 <!doctype html>
 <html lang="en-us">
 <head>
-  <title>Your Name</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Wilker Pacheco</title>
+  <meta name="description" content="Assigment portal for Wilker Pacheco WDD230"
+  <link rel="stylesheet" href="css/main.css">
+
 </head>
 <body>
- <h1>Your Name</h1>
+  <header>
+    <h1>Wilker Pacheco</h1>
+  </header>
+  <nav>
+    <ul>
+      <li>LESSON 01:<a href="index.html">Assigment portal</a></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+   
+  </nav>
+  <footer>
+
+  </footer>
+ 
 </body>
 </html>  
