--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   <header>
     <h1>Wilker Pacheco</h1>
   </header>
+  <section>
+    <h2>WDD230 Assigment Portal</h2>
+    <img src="images/Familia.jpg" alt="My family and me">
+  </section>
   <nav>
     <ul>
       <li>LESSON 01:<a href="index.html">Assigment portal</a></li>
@@ -32,7 +36,8 @@
    
   </nav>
   <footer>
-
+    © 2021 | Wilker Pacheco | Venezuela | <a href="https://www.byui.edu/online" target="_blank">BYU Idaho Online</a>
+  
   </footer>
  
 </body>
