--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
   <nav>
     <ul>
       <li>LESSON 01:<a href="index.html">Assigment portal</a></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+      <li>LESSON 02:<a href="index.html">Design Principles</a></li>
+      <li>LESSON 03:<a href="index.html">Website Planning</a></li>
+      <li>LESSON 04:<a href="index.html">Preston Town Page</a></li>
+      <li>LESSON 05:<a href="index.html">Preston Town Page II</a></li>
+      <li>LESSON 06:<a href="index.html">Responcive Images and Fonts</a></li>
+      <li>LESSON 07:<a href="index.html">Gallery Page</a></li>
+      <li>LESSON 08:<a href="index.html">Storm Center Page</a></li>
+      <li>LESSON 09:<a href="index.html">Weather Site Homepage</a></li>
+      <li>LESSON 10:<a href="index.html">Preston Weather Api</a></li>
+      <li>LESSON 11:<a href="index.html">Weather site</a></li>
+      <li>LESSON 12:<a href="index.html">Final Project</a></li>
+      <li>LESSON 13:<a href="index.html">Final Project II</a></li>
+      <li>LESSON 14:<a href="index.html">Final Project III</a></li>
     </ul>
    
   </nav>
