--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   <section>
     <h2>WDD230 Assigment Portal</h2>
-    <img src="images/Familia.jpg" width="300" alt="My family and me">
+    <img src="images/Familia actual.jpeg" width="300" alt="My family and me">
   </section>
   <nav>
     <ul>
