--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Wilker Pacheco</title>
-  <meta name="description" content="Assigment portal for Wilker Pacheco WDD230"
-  <link rel="stylesheet" href="css/main.css">
+  <meta name="description" content="Assigment portal for Wilker Pacheco WDD230">
+  <link href= "css/main.css" rel= "stylesheet" >
 
 </head>
 <body>
