--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
    
   </nav>
   <footer>
-    © 2021 | Wilker Pacheco | Venezuela | <a href="https://www.byui.edu/online" target="_blank">BYU Idaho Online</a>
+    © 2021 | Wilker Pacheco | Venezuela | 
+    <div id="enlace"> <a href="https://www.byui.edu/online" target="_blank">BYU Idaho Online</a></div>
   
   </footer>
  
