--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </header>
   <section>
     <h2>WDD230 Assigment Portal</h2>
-    <img src="images/Familia actual.jpeg" width="300" alt="My family and me">
+    <img src="images/Familiaactual.jpeg" width="300" alt="My family and me">
   </section>
   <nav>
     <ul>
@@ -36,8 +36,7 @@
    
   </nav>
   <footer>
-    © 2021 | Wilker Pacheco | Venezuela | 
-    <div id="enlace"> <a href="https://www.byui.edu/online" target="_blank">BYU Idaho Online</a></div>
+    © 2021 | Wilker Pacheco | Venezuela | <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a>
   
   </footer>
  
