--- a/index.html
+++ b/index.html
@@ -38,12 +38,10 @@
   <footer>
     © 2021 | Wilker Pacheco | Venezuela | Today's Date: <span id="currentdate"></span>|
     <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a>
+    Last update: <span id="lastModified"></span>
   
   </footer>
-  <script>
-   const options = {weeks: 'long', day: 'numeric', month: 'long', year: 'numeric'};
-document.getElementById('currentdate').textContent = new Date().toLocaleDateString('en-us', options); 
-  </script>
+  <script src="js/currentdate.js"></script>
 
  
 </body>
