--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
   </nav>
   <footer>
     © 2021 | Wilker Pacheco | Venezuela | Today's Date: <span id="currentdate"></span>|
-    <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | Last update: <span id="lastModified"></span>
-  
+    <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | 
+    Last update: <span id="lastModified"></span>
+    <script src="js/currentdate.js"></script>
   </footer>
-  <script src="js/currentdate.js"></script>
+ 
 
  
 </body>
