--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
    
   </nav>
   <footer>
-    &#169; 2021 | Wilker Pacheco | Venezuela |<a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | 
+     2021 | Wilker Pacheco | Venezuela | Today's Date: <span id="currentdate"></span>|
+    <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | 
     Last update: <span id="lastModified"></span>
     
   </footer>
