--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
    
   </nav>
   <footer>
-    &#169; 2021 | Wilker Pacheco | Venezuela | Today's Date: <span id="currentdate"></span>|
-    <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | 
-    Last update: <span id="lastModified"></span>
+    &#169;2021 | Wilker Pacheco | Venezuela | Last Update: <span id="currentdate"></span>|
+    <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> 
+   
     
   </footer>
   <script src="js/currentdate.js"></script>
