--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
    
   </nav>
   <footer>
-    &#169;2021 | Wilker Pacheco | Venezuela | Last Update: <span id="currentdate"></span>|
+    &#169;<span id="currentyear"></span> | Wilker Pacheco | Venezuela | Last Update: <span id="currentdate"></span>|
     <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> 
-   
+ 
     
   </footer>
   <script src="js/currentdate.js"></script>
+  <p id= "demo"></p>
  
 
  
