--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
    
   </nav>
   <footer>
-    &#169;| Wilker Pacheco | Venezuela | Last Update: <span id="currentdate"></span>|
+    &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Last Update: <span id="currentdate"></span>|
     <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> 
- 
-    
+   
   </footer>
   <script src="js/currentdate.js"></script>
- >
- 
+  <script>
+   
+  </script>
 
- 
 </body>
 </html>  
