--- a/index.html
+++ b/index.html
@@ -36,14 +36,11 @@
    
   </nav>
   <footer>
-    &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Last Update: <span id="currentdate"></span>|
+    &#169;Year: <span id="fullyear"></span>| Wilker Pacheco | Venezuela | Last Update: <span id="currentdate"></span>|
     <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> 
    
   </footer>
   <script src="js/currentdate.js"></script>
-  <script>
-   
-  </script>
 
 </body>
 </html>  
