--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </nav>
   <footer>
     &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="currentdate"></span>|
-    <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | Last Update:<span id="update"></span>
+    <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | Last Update:<span id="lastModified"></span>
    
   </footer>
   <script src="js/currentdate.js"></script>
