--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   </nav>
   <footer>
     &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="currentdate"></span>|
-    <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | Last Update:<span id="lastModified"></span>
-   
+    <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | 
+    <input type="file" multiple id="myfileinput">
   </footer>
   <script src="js/currentdate.js"></script>
 
