--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <footer>
     &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="currentdate"></span>|
     <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | 
-    
+    Last Update:<span id="mode"></span>
   </footer>
   <script src="js/currentdate.js"></script>
 
