--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   </nav>
   <footer>
     &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="currentdate"></span>|
-    <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | 
-    Last Modified:
+    <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a>
+  
   </footer>
   <script src="js/currentdate.js"></script>
 
