--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Wilker Pacheco</title>
   <meta name="description" content="Assigment portal for Wilker Pacheco WDD230">
-  <link href= "css/main.css" rel= "stylesheet" >
+  <link href= "css/small.css" rel= "stylesheet" >
+  <link href= "css/medium.css" rel= "stylesheet" >
   <link rel="stylesheet" href="css/normalize.css">
 
 </head>
