--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -5,9 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Wilker Pacheco</title>
   <meta name="description" content="Assigment portal for Wilker Pacheco WDD230">
-  <link href= "css/small.css" rel= "stylesheet" >
-  <link href= "css/medium.css" rel= "stylesheet" >
-  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/normalized.css">
+  <link href= "css/smalld.css" rel= "stylesheet" >
+  <link href= "css/mediumd.css" rel= "stylesheet" >
+  <link href= "css/larged.css" rel= "stylesheet" >
+  
 
 </head>
 <body>
