--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Wilker Pacheco</title>
-  <meta name="description" content="Assigment portal for Wilker Pacheco WDD230">
+  <title>Design Principles Document</title>
+  <meta name="description" content="Design Principles Document for Wilker Pacheco WDD230">
   <link rel="stylesheet" href="css/normalized.css">
   <link href= "css/smalld.css" rel= "stylesheet" >
   <link href= "css/mediumd.css" rel= "stylesheet" >
@@ -14,7 +14,16 @@
 </head>
 <body>
   <header>
-    <h1>Wilker Pacheco</h1>
+    <h1>Design Principles Document</h1>
+    <h2>Wilker Pacheco</h2>
   </header>
-  <section>
-    <h2>WDD230 Assigment Portal</h2>
+  <main>
+    <div id="columnas">
+
+    </div>
+  </main>
+  <footer>
+
+  </footer>
+</body>
+</html>
