--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -19,6 +19,13 @@
   </header>
   <main>
     <div id="columnas">
+      <di id="contrast">
+        <h3>Contrast</h3>
+        <h4>Adidas</h4>
+        <a href="https://www.adidas.com/us" target="_blank">adidas.com/us</a>
+        
+
+      </di>
 
     </div>
   </main>
