--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -19,13 +19,19 @@
   </header>
   <main>
     <div id="columnas">
-      <di id="contrast">
+      <div id="contrast">
         <h3>Contrast</h3>
         <h4>Adidas</h4>
         <a href="https://www.adidas.com/us" target="_blank">adidas.com/us</a>
-        
+        <img src="Imagesd/Adidas.png" alt="web adidas">
+      </div>
 
-      </di>
+      <div id="proximity">
+        <h3>Proximity</h3>
+        <h4>Domo</h4>
+        <a href="https://www.domo.com/" target="_blank">adidas.com/us</a>
+        <img src="Imagesd/Domo.png" alt="web Domo">
+      </div>
 
     </div>
   </main>
