--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -24,19 +24,39 @@
         <h4>Adidas</h4>
         <a href="https://www.adidas.com/us" target="_blank">adidas.com/us</a>
         <img src="Imagesd/Adidas.png" alt="web adidas">
+        <p>En esta pagina podemos observar claramente como los colores diferentes crean 
+          un contraste, logrando que el lector pueda ver la pagina completa con un solo
+          vistazo
+        </p>
       </div>
 
       <div id="proximity">
         <h3>Proximity</h3>
         <h4>Domo</h4>
-        <a href="https://www.domo.com/" target="_blank">adidas.com/us</a>
+        <a href="https://www.domo.com/" target="_blank">domo.com</a>
         <img src="Imagesd/Domo.png" alt="web Domo">
+        <p>En esta pagina podemos identificar claramente la relacion entre los elementos
+          de ella por el espacio que existe entre ellos, dando la imagen clara que uno 
+          pertenece al otro.
+        </p>
+      </div>
+
+      <div id="aligment">
+        <h3>Aligment</h3>
+        <h4>JKS</h4>
+        <a href="https://jks.jp/en/" target="_blank">Hombu dojo JKS</a>
+        <img src="Imagesd/JKS.png" alt="web JKS">
+        <p>En esta pagina podemos identificar claramente la relacion entre los elementos
+          de ella por el espacio que existe entre ellos, dando la imagen clara que uno 
+          pertenece al otro.
+        </p>
       </div>
 
     </div>
   </main>
   <footer>
-
+    &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
+    <script src="js/design.js"></script>
   </footer>
 </body>
 </html>
