--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -6,6 +6,7 @@
   <title>Design Principles Document</title>
   <meta name="description" content="Design Principles Document for Wilker Pacheco WDD230">
   <link rel="stylesheet" href="css/normalized.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono&display=swap" rel="stylesheet">
   <link href= "css/smalld.css" rel= "stylesheet" >
   <link href= "css/mediumd.css" rel= "stylesheet" >
   <link href= "css/larged.css" rel= "stylesheet" >
@@ -20,8 +21,8 @@
   <main>
     <div id="columnas">
       <div id="contrast">
-        <h3>Contrast</h3>
-        <h4>Adidas</h4>
+        <h2>Contrast</h2>
+        <h2>Adidas</h2>
         <a href="https://www.adidas.com/us" target="_blank">adidas.com/us</a>
         <img src="Imagesd/Adidas.png" alt="web adidas">
         <p>En esta pagina podemos observar claramente como los colores diferentes crean 
@@ -31,8 +32,8 @@
       </div>
 
       <div id="proximity">
-        <h3>Proximity</h3>
-        <h4>Domo</h4>
+        <h2>Proximity</h2>
+        <h2>Domo</h2>
         <a href="https://www.domo.com/" target="_blank">domo.com</a>
         <img src="Imagesd/Domo.png" alt="web Domo">
         <p>En esta pagina podemos identificar claramente la relacion entre los elementos
@@ -42,8 +43,8 @@
       </div>
 
       <div id="aligment">
-        <h3>Aligment</h3>
-        <h4>JKS</h4>
+        <h2>Aligment</h2>
+        <h2>JKS</h2>
         <a href="https://jks.jp/en/" target="_blank">Hombu dojo JKS</a>
         <img src="Imagesd/JKS.png" alt="web JKS">
         <p>En esta pagina podemos identificar claramente la relacion entre los elementos
@@ -56,7 +57,7 @@
   </main>
   <footer>
     &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
-    <script src="js/design.js"></script>
+    <script src="jsdesign/design.js"></script>
   </footer>
 </body>
 </html>
