--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE HTML>
 <html lang="en-us">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Design Principles Document</title>
   <meta name="description" content="Design Principles Document for Wilker Pacheco WDD230">
-  <link rel="stylesheet" href="css/normalized.css">
+  <link rel="stylesheet" href="design.css/normalized.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono&display=swap" rel="stylesheet">
-  <link href= "css/smalld.css" rel= "stylesheet" >
-  <link href= "css/mediumd.css" rel= "stylesheet" >
-  <link href= "css/larged.css" rel= "stylesheet" >
+  <link href= "design.css/smalld.css" rel= "stylesheet" >
+  <link href= "design.css/mediumd.css" rel= "stylesheet" >
+  <link href= "design.css/larged.css" rel= "stylesheet" >
   
 
 </head>
@@ -18,46 +18,38 @@
     <h1>Design Principles Document</h1>
     <h2>Wilker Pacheco</h2>
   </header>
-  <main>
-    <div id="columnas">
+  <main id="columnas">
       <div id="contrast">
         <h2>Contrast</h2>
-        <h2>Adidas</h2>
-        <a href="https://www.adidas.com/us" target="_blank">adidas.com/us</a>
+        <h3>Adidas</h3>
+        <a href="https://www.adidas.com" target="_blank">adidas.com/us</a>
         <img src="Imagesd/Adidas.png" alt="web adidas">
-        <p>En esta pagina podemos observar claramente como los colores diferentes crean 
-          un contraste, logrando que el lector pueda ver la pagina completa con un solo
-          vistazo
-        </p>
       </div>
 
       <div id="proximity">
         <h2>Proximity</h2>
-        <h2>Domo</h2>
+        <h3>Domo</h3>
         <a href="https://www.domo.com/" target="_blank">domo.com</a>
         <img src="Imagesd/Domo.png" alt="web Domo">
-        <p>En esta pagina podemos identificar claramente la relacion entre los elementos
-          de ella por el espacio que existe entre ellos, dando la imagen clara que uno 
-          pertenece al otro.
         </p>
       </div>
 
       <div id="aligment">
         <h2>Aligment</h2>
-        <h2>JKS</h2>
+        <h3>JKS</h3>
         <a href="https://jks.jp/en/" target="_blank">Hombu dojo JKS</a>
         <img src="Imagesd/JKS.png" alt="web JKS">
-        <p>En esta pagina podemos identificar claramente la relacion entre los elementos
-          de ella por el espacio que existe entre ellos, dando la imagen clara que uno 
-          pertenece al otro.
-        </p>
       </div>
 
-    </div>
+        <p class='one'>hdhhdhshshhsdhdh</p>
+        <p class='two'>aaaaaaaaaaaaaaaa</p>
+        <p class='three'>bbbbbbbbbbbbbbbbb</p>
+
+    
   </main>
   <footer>
-    &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
-    <script src="jsdesign/design.js"></script>
+   <p> &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
+    <script src="jsdesign/design.js"></script></p>
   </footer>
 </body>
 </html>
