--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -48,8 +48,8 @@
     
   </main>
   <footer>
-   <p> &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
-    <script src="jsdesign/design.js"></script></p>
+   &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
+    <script src="jsdesign/design.js"></script>
   </footer>
 </body>
 </html>
