--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -41,9 +41,22 @@
         <img src="Imagesd/JKS.png" alt="web JKS">
       </div>
 
-        <p class='one'>hdhhdhshshhsdhdh</p>
-        <p class='two'>aaaaaaaaaaaaaaaa</p>
-        <p class='three'>bbbbbbbbbbbbbbbbb</p>
+        <p class='one'>In this design, we can see how the different colors and their 
+          tonalities create a quite visible and pleasant contrast, the different fonts 
+          and their sizes show the reader the main idea and persuade him to see the 
+          entire web page in detail since each element with its characteristics attracts 
+          the eye and attention of the reader.</p>
+        <p class='two'>The proximity in this web design is excellent since the space 
+          between the title and the paragraph maintains the perfect distance to show 
+          that they maintain a direct relationship, it is also important to note that 
+          the distance with the company logo allows it to be easier to understand the 
+          message and relate it to the brand.</p>
+        <p class='three'>In this design, we observe how the elements of the page 
+          maintain a position on the page that allows showing order and difference in 
+          the design, and of course, in the message, the image boxes, titles, and buttons 
+          maintain a visible vertical alignment between them. and perfect, and the way they
+          are arranged transmits unity between them allowing the reader to understand and the 
+          message.</p>
 
     
   </main>
