--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -23,14 +23,14 @@
         <h2>Contrast</h2>
         <h3>Adidas</h3>
         <a href="https://www.adidas.com" target="_blank">adidas.com/us</a>
-        <img src="Imagesd/Adidas.png" alt="web adidas">
+        <img src="Imagesd/Adidas.png" alt="web adidas" id="adidas">
       </div>
 
       <div id="proximity">
         <h2>Proximity</h2>
         <h3>Domo</h3>
         <a href="https://www.domo.com/" target="_blank">domo.com</a>
-        <img src="Imagesd/Domo.png" alt="web Domo">
+        <img src="Imagesd/Domo.png" alt="web Domo" id="domo">
         </p>
       </div>
 
@@ -38,7 +38,7 @@
         <h2>Aligment</h2>
         <h3>JKS</h3>
         <a href="https://jks.jp/en/" target="_blank">Hombu dojo JKS</a>
-        <img src="Imagesd/JKS.png" alt="web JKS">
+        <img src="Imagesd/JKS.png" alt="web JKS" id="jks">
       </div>
 
         <p class='one'>In this design, we can see how the different colors and their 
@@ -62,7 +62,7 @@
   </main>
   <footer>
    &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
-    <script src="jsdesign/design.js"></script>
+   <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a><script src="jsdesign/design.js"></script>
   </footer>
 </body>
 </html>
