--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -62,7 +62,7 @@
   </main>
   <footer>
    &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
-   <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a><script src="jsdesign/design.js"></script>
+   <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | <script src="jsdesign/design.js"></script>
   </footer>
 </body>
 </html>
