--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Design Principles Document</title>
   <meta name="description" content="Design Principles Document for Wilker Pacheco WDD230">
-  <link rel="stylesheet" href="normalized.css">
+  <link rel="stylesheet" href="design.css/normalized.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono&display=swap" rel="stylesheet">
-  <link href= "design.css" rel= "stylesheet" >
-  
-  
+  <link href= "design.css/larged.css" rel= "stylesheet" >
+  <link href= "design.css/mediumd.css" rel= "stylesheet" >
+  <link href= "design.css/smalld.css" rel= "stylesheet" >
 
 </head>
 <body>
