--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -20,11 +20,12 @@
         <nav>
             <ul>
               <li><a href="index.html">Home</a></li>
-              <li><a href="target-audience.html">Color Sheme</a></li>
-              <li><a href="color-sheme.html">Target</a></li>
+              <li><a href="target-audience.html">Target</a></li>
+              <li><a href="color-sheme.html">Color Sheme</a></li>
               <li><a href="typography.html">Typography</a></li>
             </ul>
         </nav>
+        
         <main>
             <section class="name">
                 <h2>Site Name</h2>
@@ -48,14 +49,14 @@
                 <h2>Site Logo</h2>
                 <p>The logo will be this</p>
                 <img src="images/logo week3.png">
-
             </section>
   
         </main>
+        
         <footer>
             &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
             <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | <script src="js/lesson3.js"></script>
-           </footer>
+         </footer>
 
     </body>
 
