--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Website Planning Document</title>
         <meta name="description" content="Website Planning Document for Wilker Pacheco WDD230">
-        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="css/normalize.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono&display=swap" rel="stylesheet">
         <link href= "css/small.css" rel= "stylesheet" >
         <link href= "css/medium.css" rel="stylesheet">
@@ -27,32 +27,32 @@
         </nav>
         
         <main>
-            <section class="name">
-                <h2>Site Name</h2>
+            <section>
+                <h2 class="name">Site Name</h2>
                 <p>The site name will be mistdrizzle.com</p>
             </section>
 
-            <section class="purpose">
-                <h2>Site Purpose</h2>
+            <section>
+                <h2 class="purpose">Site Purpose</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam tempora id
                  at amet eius, quod laborum rem odit aliquid nulla impedit asperiores quasi 
                  tempore dolore. A tenetur veniam soluta esse?</p>
             </section>
 
-            <section class="domain">
-                <h2>Domain Name</h2>
+            <section>
+                <h2 class="domain">Domain Name</h2>
                 <p>The domain name is mistdrizzle.com for $14.95 per year</p>
-                <img src="images/imgdomain.png">
+                <img src="images/imgdomain.png" width="25" height="400">
             </section>
 
-            <section class="logo">
-                <h2>Site Logo</h2>
+            <section>
+                <h2 class="logo">Site Logo</h2>
                 <p>The logo will be this</p>
-                <img src="images/logo week3.png">
+                <img src="images/logo2.png" id="logo" width="25" height="200">
             </section>
   
         </main>
-        
+
         <footer>
             &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
             <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | <script src="js/lesson3.js"></script>
