--- a/Lesson3/typography.html
+++ b/Lesson3/typography.html
@@ -28,13 +28,15 @@
                 <li><a href="typography.html">Typography</a></li>
               </ul>
         </nav>
+        <main>
+            <section>
+                <h1>Typography</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt facere 
+                    molestiae, vero sequi consequatur est vel quae libero mollitia adipisci 
+                    dolore impedit, minus harum totam neque aliquam error aperiam laudantium.</p>
+             </section>
 
-        <section>
-            <h1>Typography</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt facere 
-                molestiae, vero sequi consequatur est vel quae libero mollitia adipisci 
-                dolore impedit, minus harum totam neque aliquam error aperiam laudantium.</p>
-        </section>
+        </main>
 
         <footer>
             &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
