--- a/Lesson3/target-audience.html
+++ b/Lesson3/target-audience.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Website Planning Document</title>
         <meta name="description" content="Website Planning Document for Wilker Pacheco WDD230">
-        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="css/normalize.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono&display=swap" rel="stylesheet">
         <link href= "css/small.css" rel= "stylesheet" >
         <link href= "css/medium.css" rel="stylesheet">
@@ -28,36 +28,36 @@
         </nav>
         <main>
             <section>
-                <h1>Target Audience</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus 
+                <h1 class="target">Target Audience</h1>
+                <p class="one">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus 
                     tenetur obcaecati voluptates amet numquam quidem dignissimos excepturi 
                     optio. Aperiam voluptates ea porro sed odit fugiat beatae explicabo, 
                     odio hic suscipit?</p>
             </section>
 
             <section>
-                <h2>Description of the target</h2>
+                <h2 class="audience">Description of the target</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, deserunt 
                     non nam, dicta blanditiis nihil reprehenderit ea natus amet quaerat minus 
                     quas facilis quo dolorum totam, sint suscipit dignissimos incidunt!</p>
             </section>
 
             <section>
-                <h2>Persons</h2>
-                <img src="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos natus 
+                <h2 class="audience">Persons</h2>
+                <img src="images/agricultor.jpg" class="images" alt="farmer watching his planting">
+                <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos natus 
                     aspernatur, asperiores commodi facere, in possimus, quibusdam quisquam 
                     provident iste eligendi. Ad unde blanditiis odit rem libero accusantium 
                     autem qui?</p>
-                <img src="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis cum in 
+                <img src="images/acampando.jpg" class="images" alt="couple camping by a campfire">
+                <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis cum in 
                     magni exercitationem molestias ipsum molestiae et ratione recusandae 
                     impedit quasi sit dolores, voluptatem dolorem ullam, expedita nulla sint 
                     modi?</p>
             </section>
 
             <section>
-                <h1>Scenarios</h1>
+                <h2 class="audience">Scenarios</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, ipsa quo 
                     suscipit tenetur labore esse amet. Fuga quia, placeat consequatur sapiente 
                     itaque numquam vero aliquid iusto deleniti eligendi beatae neque!</p>
