--- a/Lesson3/typography.html
+++ b/Lesson3/typography.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Website Planning Document</title>
         <meta name="description" content="Website Planning Document for Wilker Pacheco WDD230">
-        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="css/normalize.css">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Roboto+Mono&display=swap" rel="stylesheet">
         <link href= "css/small.css" rel= "stylesheet" >
         <link href= "css/medium.css" rel="stylesheet">
