--- a/Lesson3/typography.html
+++ b/Lesson3/typography.html
@@ -30,8 +30,8 @@
         </nav>
         <main>
             <section>
-                <h1>Typography</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt facere 
+                <h1 class="target">Typography</h1>
+                <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt facere 
                     molestiae, vero sequi consequatur est vel quae libero mollitia adipisci 
                     dolore impedit, minus harum totam neque aliquam error aperiam laudantium.</p>
              </section>
