--- a/Lesson3/color-sheme.html
+++ b/Lesson3/color-sheme.html
@@ -28,10 +28,10 @@
 
         <main>
             <section>
-                <h1>Color Palette</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint impedit 
+                <h1 class="target">Color Palette</h1>
+                <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint impedit 
                     culpa in aliquid. Eum voluptatum beatae sunt. Magnam earum voluptas 
-                    officia voluptates delectus. Voluptatem fugiat architecto suscipit dicta, 
+                    of ficia voluptates delectus. Voluptatem fugiat architecto suscipit dicta, 
                     deserunt enim.</p>
                 <img src="">
             </section>
