--- a/Lesson3/color-sheme.html
+++ b/Lesson3/color-sheme.html
@@ -33,8 +33,50 @@
                     culpa in aliquid. Eum voluptatum beatae sunt. Magnam earum voluptas 
                     of ficia voluptates delectus. Voluptatem fugiat architecto suscipit dicta, 
                     deserunt enim.</p>
-                <img src="">
+                <img src="images/color palette.png" alt="different color">
             </section>
+
+            <table>
+                <tr>
+                    <th>
+                        Elements
+                    </th>
+                    <th>
+                        Color
+                    </th>
+                </tr>
+                <tr>
+                    <td>Background-color body</td>
+                    <td>65B800</td>
+                </tr>
+                <tr>
+                    <td>main, nav</td>
+                    <td>FFFFFF</td>
+                </tr>
+                <tr>
+                    <td>header</td>
+                    <td>008BF8</td>
+                </tr>
+                <tr>
+                    <td>headings (h1,h2)</td>
+                    <td>DC0073</td>
+                </tr>
+                <tr>
+                    <td>Paragraph, footer</td>
+                    <td>05100C</td>
+
+                </tr>
+                <tr>
+                    <td>nav a hover</td>
+                    <td>E95DA6</td>
+
+                </tr>
+                <tr>
+                    <td>Background color nav a</td>
+                    <td>F5B700</td>
+
+                </tr>
+            </table>
 
         </main>
 
