--- a/Lesson3/color-sheme.html
+++ b/Lesson3/color-sheme.html
@@ -29,11 +29,10 @@
         <main>
             <section>
                 <h1 class="target">Color Palette</h1>
-                <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint impedit 
-                    culpa in aliquid. Eum voluptatum beatae sunt. Magnam earum voluptas 
-                    of ficia voluptates delectus. Voluptatem fugiat architecto suscipit dicta, 
-                    deserunt enim.</p>
-                <img src="images/color palette.png" alt="different color">
+                <p class="one">These different colors were chosen according to the theme of the 
+                    website, with the intention that the reader's visit is pleasant and captures 
+                    their attention, they are cheerful and pleasant colors.</p>
+                <img src="images/color palette.png" alt="different color" class="palette">
             </section>
 
             <table>
