--- a/Lesson3/typography.html
+++ b/Lesson3/typography.html
@@ -31,9 +31,11 @@
         <main>
             <section>
                 <h1 class="target">Typography</h1>
-                <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt facere 
-                    molestiae, vero sequi consequatur est vel quae libero mollitia adipisci 
-                    dolore impedit, minus harum totam neque aliquam error aperiam laudantium.</p>
+                <p class="one">The type of font that we will use for this project are the following:</p>
+                <p>heading-font: "Open sans, san serif";</p>
+                <p>paragraph-font: Source Serif Pro, serif</p>
+                <p>This is <a href="https://fonts.google.com/specimen/Source+Serif+Pro?sidebar.open&selection.family=Open+Sans|Source+Serif+Pro" target_blank>url</a></p>
+                
              </section>
 
         </main>
