--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -29,14 +29,19 @@
         <main>
             <section>
                 <h2 class="name">Site Name</h2>
-                <p>The site name will be mistdrizzle.com</p>
+                <p>The name of the website will be mistdrizzle.com</p>
             </section>
 
             <section>
                 <h2 class="purpose">Site Purpose</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam tempora id
-                 at amet eius, quod laborum rem odit aliquid nulla impedit asperiores quasi 
-                 tempore dolore. A tenetur veniam soluta esse?</p>
+                <p>The purpose of this website is to provide the community with the most 
+                    up-to-date information on the weather in different parts of Venezuela, 
+                    and thus allow citizens to make decisions that are prudent as the case 
+                    may be, such as what clothes to wear, What places can you visit and what 
+                    type of activities to carry out and if this affects your work or study hours, 
+                    the information provided is easy to access since the website is easy to 
+                    access and navigate by anyone who can handle the internet, It will have 
+                    images of the places, videos and recommendations for the user.</p>
             </section>
 
             <section>
