--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -37,7 +37,7 @@
                 <p>The purpose of this website is to provide the community with the most 
                     up-to-date information on the weather in different parts of Venezuela, 
                     and thus allow citizens to make decisions that are prudent as the case 
-                    may be, such as what clothes to wear, What places can you visit and what 
+                    may be, such as what clothes to wear, What places can you visit, and what 
                     type of activities to carry out and if this affects your work or study hours, 
                     the information provided is easy to access since the website is easy to 
                     access and navigate by anyone who can handle the internet, It will have 
@@ -51,7 +51,7 @@
             </section>
 
             <section>
-                <h2 class="logo">Site Logo</h2>
+                <h2 class="logo">Website Logo</h2>
                 <p>The logo will be this</p>
                 <img src="images/logo2.png" id="logo" width="25" height="200">
             </section>
