--- a/Lesson3/target-audience.html
+++ b/Lesson3/target-audience.html
@@ -29,38 +29,44 @@
         <main>
             <section>
                 <h1 class="target">Target Audience</h1>
-                <p class="one">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus 
-                    tenetur obcaecati voluptates amet numquam quidem dignissimos excepturi 
-                    optio. Aperiam voluptates ea porro sed odit fugiat beatae explicabo, 
-                    odio hic suscipit?</p>
-            </section>
-
-            <section>
                 <h2 class="audience">Description of the target</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In, deserunt 
-                    non nam, dicta blanditiis nihil reprehenderit ea natus amet quaerat minus 
-                    quas facilis quo dolorum totam, sint suscipit dignissimos incidunt!</p>
+                <p class="one">The website is aimed at people 12 years and older, who live in
+                     Venezuela or wish to visit this beautiful country, who can access the 
+                     internet to visit the website, the weather is something that affects 
+                     everyone but especially those who plan to do travel by different means,
+                     whether by land, air or sea, for vacations or work, farmers, and anyone 
+                     who the state of the weather may affect their performance or safety</p>
             </section>
 
             <section>
                 <h2 class="audience">Persons</h2>
                 <img src="images/agricultor.jpg" class="images" alt="farmer watching his planting">
-                <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos natus 
-                    aspernatur, asperiores commodi facere, in possimus, quibusdam quisquam 
-                    provident iste eligendi. Ad unde blanditiis odit rem libero accusantium 
-                    autem qui?</p>
+                <p class="one"><strong>Name:</strong>Javier Bastidass</p>
+                <p class="one"><strong>Age:</strong>thirties</p>
+                <p class="one"><strong>Ocupation:</strong>Farmer</p>
+                <p class="one"><strong>Purpose of visit:</strong>Javier would visit our site to 
+                    find out about the weather predictions to make decisions on the preservation 
+                    of his crops or when is the right time to cultivate and thus make his work 
+                    profitable and prosperous.</p>
                 <img src="images/acampando.jpg" class="images" alt="couple camping by a campfire">
-                <p class="one">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis cum in 
-                    magni exercitationem molestias ipsum molestiae et ratione recusandae 
-                    impedit quasi sit dolores, voluptatem dolorem ullam, expedita nulla sint 
-                    modi?</p>
+                <p class="one"><strong>Name:</strong>Pedro y Maria Velasquez</p>
+                <p class="one"><strong>Age:</strong>twenties</p>
+                <p class="one"><strong>Ocupation:</strong>Web Designer</p>
+                <p class="one"><strong>Purpose of visit:</strong>Pedro and Maria would visit 
+                    our website to find out if the places they want to visit for outdoor 
+                    activities like camping have the weather conditions for them to visit and 
+                    if the road conditions are optimal.</p>
+                
             </section>
 
             <section>
                 <h2 class="audience">Scenarios</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, ipsa quo 
-                    suscipit tenetur labore esse amet. Fuga quia, placeat consequatur sapiente 
-                    itaque numquam vero aliquid iusto deleniti eligendi beatae neque!</p>
+                <p>The scenarios that visitors can find solutions on this website are as follows:</p>
+                <p>The roads are safe?</p>
+                <p>Is there an emergency that is approaching or is it occurring?</p>
+                <p>What precautions should I take according to the weather reports?</p>
+                <p>Is it possible that the weather could affect my work?</p>
+                <p>Are the places we plan to go on vacation safe for the scheduled date?</p>
             </section>
 
         </main>
