--- a/Lesson3/typography.html
+++ b/Lesson3/typography.html
@@ -34,7 +34,8 @@
                 <p class="one">The type of font that we will use for this project are the following:</p>
                 <p>heading-font: "Open sans, san serif";</p>
                 <p>paragraph-font: Source Serif Pro, serif</p>
-                <p>This is the url <a href="https://fonts.google.com/specimen/Source+Serif+Pro?sidebar.open&selection.family=Open+Sans|Source+Serif+Pro" target_blank>https://fonts.google.com/specimen/Source+Serif+Pro?sidebar.open&selection.family=Open+Sans|Source+Serif+Pro</a></p>
+                <p>This is the url:</p>
+                <p><a href="https://fonts.google.com/specimen/Source+Serif+Pro?sidebar.open&selection.family=Open+Sans|Source+Serif+Pro" target="_blank">Fonts Google</a></p>
                 
              </section>
 
