--- a/Lesson3/target-audience.html
+++ b/Lesson3/target-audience.html
@@ -29,7 +29,7 @@
         <main>
             <section>
                 <h1 class="target">Target Audience</h1>
-                <h2 class="audience">Description of the target</h2>
+                <h2 class="audience">Description</h2>
                 <p class="one">The website is aimed at people 12 years and older, who live in
                      Venezuela or wish to visit this beautiful country, who can access the 
                      internet to visit the website, the weather is something that affects 
