--- a/Lesson3/index.html
+++ b/Lesson3/index.html
@@ -60,7 +60,7 @@
 
         <footer>
             &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
-            <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> |<script src="js/lastModified.js"></script>
+            <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> |<script src="js/lesson3.js"></script>
          </footer>
 
     </body>
