--- a/Lesson3/color-sheme.html
+++ b/Lesson3/color-sheme.html
@@ -80,7 +80,7 @@
         </main>
 
         <footer>
-            &#169;<span id="fullyear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
+            &#169;<span id="fullYear"></span>| Wilker Pacheco | Venezuela | Current day: <span id="design"></span>|         
             <a href="https://www.byui.edu/online" target="_blank">BYU Idaho online</a> | <script src="js/lesson3.js"></script>
 
         </footer>
