--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -18,10 +18,12 @@
         </header>
         <nav>
             <ul>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="target-audience.html">Target</a></li>
-              <li><a href="color-sheme.html">Color Sheme</a></li>
-              <li><a href="typography.html">Typography</a></li>
+              <li><a href="preston-4.html">Home</a></li>
+              <li><a href="">Preston</a></li>
+              <li><a href="">Soda Springs</a></li>
+              <li><a href="">Fish Haven</a></li>
+              <li><a href="">Storm Center</a></li>
+              <li><a href="">Gallery</a></li>
             </ul>
         </nav>
         
